----------
v4.3.0-git
----------

[jan] Add browse(), put(), and path_delete() methods to API to support WebDAV
      access.


------
v4.2.2
------

[mjr] Fix replacing tags in existing notes (Bug# 13417).


------
v4.2.1
------

[mjr] Ensure default share attribute is set when auto determining a default
      share.
[mjr] Fix showing the notepad name in list view when show_notepad preference is
      set (Bug #13352).
[mjr] Add EAS client created shares to the sync_notpads preference (Bug
      #13359).
[mjr] Add missing API support for searchTags API (Bug #13361).
[mjr] Fix issue that caused notes to be tagged with a broken username.


------
v4.2.0
------

[jan] Fix error after successful import (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13272).
[jan] Fix link on edit form to delete notes (Thomas Jarosch
      <thomas.jarosch@intra2net.com>, Bug #13271).
[jan] Fix exporting tags to CSV (Thomas Jarosch <thomas.jarosch@intra2net.com>,
      Bug #13269).
[jan] Fix adding and editing notes with Kolab backend (Bug #13269).


---------
v4.2.0RC1
---------

[jan] Update Polish translation (Maciej Uhlig <maciej.uhlig@us.edu.pl>).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


------------
v4.2.0alpha1
------------

[jan] Make SQL backend compatible with Oracle.
[jan] Make shares table compatible with Oracle.
[jan] Make notepad checkbox links switches instead of toggles.
[jan] Replace categories with tags.
[jan] Convert to Horde_View.


------
v4.1.3
------

[jan] Add Korean translation (Deokgon Kim <dgkim@dgkim.net>).
[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[mjr] Fix unencrypting and saving a previously encrypted note (Bug #12890).
[mjr] Fix fatal error when exporting encrypted notes via ActiveSync.
[mjr] Fix saving note after saving failed due to mismatched passwords (Bug
      #12855).


------
v4.1.2
------

[jan] SECURITY: Fix XSS vulnerabilities when deleting notepads.